<resources>
    <string name="app_name">Matome Mobile</string>

    <string name="TAG">matome</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="search">SEARCH</string>
    <string name="saved_articles">SAVED ARTICLES</string>
    <string name="read_later">READ LATER</string>
    <string name="pull_to_refresh">Keep pull down to begin refresh</string>
    <string name="pull_to_refresh_2">Now you can release me to refresh</string>
    <string name="loadingpage">Loading...</string>
    <string name="suggest_retry">If take too much time, click \"Retry\" button below.</string>
    <string name="retry">RETRY</string>
    <string name="bmp">bmp</string>
</resources>
